Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/pycat.ipynb
+++ b/pycat.ipynb
@@ -32,6 +32,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This method is not for a total newbie in programming as you must know Python a bit to start, and have some entry-level programming skills. The Python was selected as it is the most popular programming language now for programming learning, and because this language implementation is so dynamic, as you can implement your own language system atop of PVM runtime."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But it is not the end as this Picat implementation uses not pure Python but the homoiconic hypergraph model written itself in Python -- executable data structures (EDS) built from some sort of Marvin Minsky frames [minsky]. It was mostly selected to make this language to be not visual but **visualizable**: it is important for the newbies that a learning programming system to be Smalltalk-like interactive and deeply researchable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### MIT License\n",
     "\n",
     "Copyright (c) 2019 Dmitry Ponyatov <<dponyatov@gmail.com>>\n",
