--- a/pycat.ipynb
+++ b/pycat.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "github: https://github.com/ponyatov/pycat\n",
     "\n",
-    "Jupyter notebook render: https://nbviewer.jupyter.org/github/ponyatov/pycat/blob/master/pycat.ipynb"
+    "Jupyter notebook render: https://nbviewer.jupyter.org/github/ponyatov/pycat/blob/master/pycat.ipynb\n",
+    "\n",
+    "Run online with Binder: https://mybinder.org/v2/gh/ponyatov/pycat/master?filepath=pycat.ipynb"
    ]
   },
   {
