Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/pycat.ipynb
+++ b/pycat.ipynb
@@ -235,7 +235,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c0565e6d8>"
+       "<graphviz.dot.Digraph at 0x7f1968fd4748>"
       ]
      },
      "execution_count": 3,
@@ -345,7 +345,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c0563dba8>"
+       "<graphviz.dot.Digraph at 0x7f1968fd4780>"
       ]
      },
      "execution_count": 4,
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Frame at 0x7f3c0565e438>"
+       "<__main__.Frame at 0x7f1968fb3f28>"
       ]
      },
      "execution_count": 6,
@@ -476,7 +476,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "prefix = <frame:Hello World> id:7f3c056bd438\n"
+      "prefix = <frame:Hello World> id:7f1968150b70\n"
      ]
     }
    ],
@@ -567,8 +567,8 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 40)\">\n",
        "<title>%3</title>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-40 162.586,-40 162.586,4 -4,4\"/>\n",
-       "<!-- 139895765196472 -->\n",
-       "<g id=\"node1\" class=\"node\"><title>139895765196472</title>\n",
+       "<!-- 139747097118816 -->\n",
+       "<g id=\"node1\" class=\"node\"><title>139747097118816</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"79.293\" cy=\"-18\" rx=\"79.0865\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"79.293\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:Hello World</text>\n",
        "</g>\n",
@@ -576,7 +576,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c045c8cc0>"
+       "<graphviz.dot.Digraph at 0x7f1968150978>"
       ]
      },
      "execution_count": 10,
@@ -747,7 +747,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c0563dba8>"
+       "<graphviz.dot.Digraph at 0x7f1968fd4780>"
       ]
      },
      "execution_count": 12,
@@ -791,14 +791,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "<frame:Hello> id:7f3c045ce0b8\n",
-      "\tself = <frame:Hello> id:7f3c045ce0b8 _/\n",
-      "\tsome = <frame:attribute> id:7f3c045ceeb8\n",
-      "\t\tframe = <frame:slot> id:7f3c045e0048\n",
-      "\tstring = <str:typecasted> id:7f3c045e00b8\n",
-      "\t0: <frame:World> id:7f3c045cef28\n",
-      "\t1: <frame:Hello> id:7f3c045ce0b8 _/\n",
-      "\t2: <str:string> id:7f3c045cef98\n"
+      "<frame:Hello> id:7f196816df98\n",
+      "\tself = <frame:Hello> id:7f196816df98 _/\n",
+      "\tsome = <frame:attribute> id:7f196816df60\n",
+      "\t\tframe = <frame:slot> id:7f1968168128\n",
+      "\tstring = <str:typecasted> id:7f1968168198\n",
+      "\t0: <frame:World> id:7f1968168048\n",
+      "\t1: <frame:Hello> id:7f196816df98 _/\n",
+      "\t2: <str:string> id:7f19681680b8\n"
      ]
     },
     {
@@ -815,74 +815,74 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 202)\">\n",
        "<title>%3</title>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-202 468.871,-202 468.871,4 -4,4\"/>\n",
-       "<!-- 139895747961016 -->\n",
-       "<g id=\"node1\" class=\"node\"><title>139895747961016</title>\n",
+       "<!-- 139747097239448 -->\n",
+       "<g id=\"node1\" class=\"node\"><title>139747097239448</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"53.9452\" cy=\"-99\" rx=\"53.8905\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-95.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:Hello</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895747961016 -->\n",
-       "<g id=\"edge1\" class=\"edge\"><title>139895747961016&#45;&gt;139895747961016</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097239448 -->\n",
+       "<g id=\"edge1\" class=\"edge\"><title>139747097239448&#45;&gt;139747097239448</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M46.1662,-117.153C44.9694,-126.539 47.5624,-135 53.9452,-135 57.8347,-135 60.317,-131.858 61.3919,-127.28\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"64.8943,-127.262 61.7243,-117.153 57.898,-127.032 64.8943,-127.262\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-138.8\" font-family=\"Times,serif\" font-size=\"14.00\">self</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895747961016 -->\n",
-       "<g id=\"edge6\" class=\"edge\"><title>139895747961016&#45;&gt;139895747961016</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097239448 -->\n",
+       "<g id=\"edge6\" class=\"edge\"><title>139747097239448&#45;&gt;139747097239448</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M41.131,-116.699C34.0527,-133.996 38.3241,-153 53.9452,-153 66.6374,-153 71.8369,-140.454 69.5439,-126.472\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"72.8656,-125.357 66.7594,-116.699 66.1336,-127.275 72.8656,-125.357\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-156.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n",
        "</g>\n",
-       "<!-- 139895747964600 -->\n",
-       "<g id=\"node2\" class=\"node\"><title>139895747964600</title>\n",
+       "<!-- 139747097239392 -->\n",
+       "<g id=\"node2\" class=\"node\"><title>139747097239392</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-180\" rx=\"63.8893\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-176.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:attribute</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895747964600 -->\n",
-       "<g id=\"edge2\" class=\"edge\"><title>139895747961016&#45;&gt;139895747964600</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097239392 -->\n",
+       "<g id=\"edge2\" class=\"edge\"><title>139747097239448&#45;&gt;139747097239392</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M84.4178,-114.096C97.0889,-120.441 112.124,-127.778 125.89,-134 147.172,-143.619 171.075,-153.574 191.291,-161.752\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"190.01,-165.009 200.593,-165.496 192.623,-158.516 190.01,-165.009\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-151.8\" font-family=\"Times,serif\" font-size=\"14.00\">some</text>\n",
        "</g>\n",
-       "<!-- 139895748034744 -->\n",
-       "<g id=\"node4\" class=\"node\"><title>139895748034744</title>\n",
+       "<!-- 139747097215384 -->\n",
+       "<g id=\"node4\" class=\"node\"><title>139747097215384</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-126\" rx=\"59.2899\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-122.3\" font-family=\"Times,serif\" font-size=\"14.00\">str:typecasted</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895748034744 -->\n",
-       "<g id=\"edge4\" class=\"edge\"><title>139895747961016&#45;&gt;139895748034744</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097215384 -->\n",
+       "<g id=\"edge4\" class=\"edge\"><title>139747097239448&#45;&gt;139747097215384</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M103.889,-106.236C125.704,-109.46 151.663,-113.298 174.878,-116.73\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"174.577,-120.223 184.982,-118.224 175.601,-113.299 174.577,-120.223\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-118.8\" font-family=\"Times,serif\" font-size=\"14.00\">string</text>\n",
        "</g>\n",
-       "<!-- 139895747964712 -->\n",
-       "<g id=\"node5\" class=\"node\"><title>139895747964712</title>\n",
+       "<!-- 139747097215048 -->\n",
+       "<g id=\"node5\" class=\"node\"><title>139747097215048</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-72\" rx=\"57.3905\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-68.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:World</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895747964712 -->\n",
-       "<g id=\"edge5\" class=\"edge\"><title>139895747961016&#45;&gt;139895747964712</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097215048 -->\n",
+       "<g id=\"edge5\" class=\"edge\"><title>139747097239448&#45;&gt;139747097215048</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M103.889,-91.7645C126.264,-88.4568 152.999,-84.5045 176.661,-81.0065\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"177.211,-84.4633 186.592,-79.5384 176.188,-77.5385 177.211,-84.4633\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-91.8\" font-family=\"Times,serif\" font-size=\"14.00\">0</text>\n",
        "</g>\n",
-       "<!-- 139895747964824 -->\n",
-       "<g id=\"node6\" class=\"node\"><title>139895747964824</title>\n",
+       "<!-- 139747097215160 -->\n",
+       "<g id=\"node6\" class=\"node\"><title>139747097215160</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-18\" rx=\"42.4939\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">str:string</text>\n",
        "</g>\n",
-       "<!-- 139895747961016&#45;&gt;139895747964824 -->\n",
-       "<g id=\"edge7\" class=\"edge\"><title>139895747961016&#45;&gt;139895747964824</title>\n",
+       "<!-- 139747097239448&#45;&gt;139747097215160 -->\n",
+       "<g id=\"edge7\" class=\"edge\"><title>139747097239448&#45;&gt;139747097215160</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M85.1747,-84.1142C97.7084,-78.0464 112.437,-71.0499 125.89,-65 149.518,-54.3748 176.259,-43.0966 197.65,-34.2521\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"199.159,-37.4159 207.072,-30.3708 196.493,-30.9436 199.159,-37.4159\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-68.8\" font-family=\"Times,serif\" font-size=\"14.00\">2</text>\n",
        "</g>\n",
-       "<!-- 139895748034632 -->\n",
-       "<g id=\"node3\" class=\"node\"><title>139895748034632</title>\n",
+       "<!-- 139747097215272 -->\n",
+       "<g id=\"node3\" class=\"node\"><title>139747097215272</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"418.075\" cy=\"-180\" rx=\"46.5926\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"418.075\" y=\"-176.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:slot</text>\n",
        "</g>\n",
-       "<!-- 139895747964600&#45;&gt;139895748034632 -->\n",
-       "<g id=\"edge3\" class=\"edge\"><title>139895747964600&#45;&gt;139895748034632</title>\n",
+       "<!-- 139747097239392&#45;&gt;139747097215272 -->\n",
+       "<g id=\"edge3\" class=\"edge\"><title>139747097239392&#45;&gt;139747097215272</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M302.661,-180C321.745,-180 342.562,-180 361.145,-180\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"361.214,-183.5 371.214,-180 361.214,-176.5 361.214,-183.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"336.779\" y=\"-183.8\" font-family=\"Times,serif\" font-size=\"14.00\">frame</text>\n",
@@ -891,7 +891,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c045e0198>"
+       "<graphviz.dot.Digraph at 0x7f1968168278>"
       ]
      },
      "execution_count": 14,
@@ -1073,7 +1073,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3c045c8588>"
+       "<graphviz.dot.Digraph at 0x7f19681674e0>"
       ]
      },
      "execution_count": 15,
@@ -1133,6 +1133,78 @@
     "class Struct(Compound): pass\n",
     "class Array(Struct): pass\n",
     "class Map(Struct): pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting parser.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile parser.py\n",
+    "\n",
+    "## Pycat syntax parser\n",
+    "\n",
+    "import ply.lex  as lex\n",
+    "import ply.yacc as yacc\n",
+    "\n",
+    "tokens = ['var']\n",
+    "\n",
+    "def t_var(t):\n",
+    "    r'[A-Z][A-Za-z0-9_]*'\n",
+    "    return Var(t.value)\n",
+    "\n",
+    "def t_error(t):\n",
+    "    raise SyntaxError(t)\n",
+    "\n",
+    "lexer = lex.lex()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lexer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-84f752e6d975>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mparser\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlexer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lexer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from parser import *\n",
+    "lexer"
    ]
   }
  ],
