Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/pycat.ipynb
+++ b/pycat.ipynb
@@ -1144,31 +1144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting parser.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile parser.py\n",
-    "\n",
     "## Pycat syntax parser\n",
+    "\n",
+    "__file__ = 'pycat.ipynb' # required to run in Jupyter\n",
     "\n",
     "import ply.lex  as lex\n",
     "import ply.yacc as yacc\n",
@@ -1187,23 +1169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'lexer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-84f752e6d975>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mparser\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlexer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'lexer' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<ply.lex.Lexer at 0x7f19680726a0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from parser import *\n",
     "lexer"
    ]
   }
